--- a/Exercises/Development/KMP_Users_Choice.html
+++ b/Exercises/Development/KMP_Users_Choice.html
@@ -27,7 +27,11 @@
   <script src="../../AV/Development/edit.js"></script>
   <script>
 
-    var kmp_exercise, master_str, sub_str, compares, shifts, started;
+    var kmp_exercise, master_str, sub_str, started, align_table_temp;
+    var compares = 0;
+    var user_compares = 0;
+    var shifts = 0;
+    var user_shifts = 0;
 
     /*#################################################################
       These global constants are set to modify the strings easily.
@@ -144,13 +148,49 @@
     return align;
     }
 
+    function kmp_real(master, sub, align, which) {
+      var m = 0;
+      var s = 0;
+      while((m < sub.length-1) && (sub.length - s <= master.length -m)) {
+        if(master[m] == sub[s]){
+          if(which ==1){
+            compares+=1;
+          } else {
+            user_compares+=1;
+          }
+                   
+          m+=1;
+          s+=1;
+        } else if (s ==0 ){
+          if(which == 1){
+            compares+=1;
+          } else {
+            user_compares +=1;
+          }
+          
+          m+=1;
+        } else {
+          if(which == 1){
+            shifts+=1;
+            compares+=1;
+          } else {
+            user_shifts +=1;
+            user_compares +=1;
+          }
+          s = align[s];
+        }
+      }
+      if(s == sub.length-1) {
+        return m-s;
+      } else {
+        return -1;
+      }
+    }
+
 
     function kmp(master, sub, align) {
-
         var m = 0;
         var s = 0;
-        compares = 0;
-        shifts = 0;
         //highlight the first spots
         master.highlight(m);
         sub.highlight(m);   
@@ -162,7 +202,6 @@
           if(master.value(m) === sub.value(m)) {          
             m+=1;
             s+=1;
-            compares+=1;
             //case that we have found a match
             if(sub.value(m) == ' ') {
               found = true;
@@ -174,7 +213,6 @@
             sub.highlight(m);
           } else if(s == 0) {
             m+=1;
-            compares+=1;
             for(var i = sub.size()-1; i > 0; i--){
               sub.value(i, sub.value(i-1));
             }
@@ -184,8 +222,6 @@
             master.highlight(m);
             sub.highlight(m);
           } else {
-            compares+=1;
-            shifts+=1;
             n = s;
             align.highlight(s);        
             s = align.value(s);
@@ -211,62 +247,46 @@
 
 
     function checkAnswer() {
-      var answer = 2
-      if(answer == 2) {
+      var user_master = $("#user_master_id").val();
+      var user_sub = $("#user_sub_id").val();
+      var user_align = compute_align_array(user_sub.split(""));
+      kmp_real(user_master.split(""), user_sub.split(""), user_align, 2);
+
+      if(user_compares == compares && user_shifts == shifts) {
         return true;
       } else {
         return false;
       }
     }
 
-
+    function reset_ex() {
+      kmp_exercise = null;
+      master_str = null;
+      sub_str = null;
+      started = null;
+      align_table_temp = null;
+      compares = 0;
+      user_compares = 0;
+      shifts = 0;
+      user_shifts = 0;   
+    }
     //This function initializes the arrays, and handles the clicks on the specific indexes, see comments in method for more information
     function make_arrays(){
-      started = true;
-      kmp_exercise = new JSAV("container");
-      var max = 0;
+      reset_ex();
       var strs = generate_strings();
       master_str = strs[0];
       sub_str = strs[1];
 
-      var master_arr = master_str.split("");
-      var sub_arr = sub_str.split("");
+      align_table_temp = compute_align_array(sub_str.split(""));
 
-      main_text = kmp_exercise.ds.array([' '], {indexed: true});
+      kmp_real(master_str.split(""), sub_str.split(""), align_table_temp, 1);
 
-
-      for(i=0; i<master_str.length;i++) {
-        main_text.value(i, master_str.charAt(i));
-      }
-
-      search_string = kmp_exercise.ds.array([' ']);
-
-      for(z=0;z<search_string.size();z++) {
-        search_string.value(z, ' ');
-      }
-
-      //need to make the arrays align nicely so we need to fill the remaining indexes of the substring array with empty characters 
-      for(j=0;j<master_str.length;j++) {
-        if(sub_str.charAt(j).length > 0) {
-          search_string.value(j, sub_str.charAt(j));
-        } else {
-          search_string.value(j, " ");
-        }
-      }
-      //initializing the alignment array
-      var alignment_table = kmp_exercise.ds.array([' ']);
-      var align_table_temp = new Array();
-      align_table_temp = compute_align_array(sub_arr);
-      for(f=0;f<align_table_temp.length;f++) {
-        alignment_table.value(f, align_table_temp[f]);
-      }
-      kmp_exercise.displayInit();
-      kmp_exercise.step();
-      kmp(main_text, search_string, alignment_table);
       $("#number1").html("Number 1 (compares): "+compares);
       $("#number2").html("Number 2 (shifts): "+shifts);
-
+      started = true;
     }
+
+
   </script>
   <link rel="stylesheet" href="http://algoviz.org/OpenDSA/JSAV/css/JSAV.css" type="text/css" /> 
 
@@ -292,22 +312,23 @@
 
               <p id = "number1"> </p>
               <p id = "number2"> </p>
+              <p><b>Your Master String:</b> <input type = "text" id = "user_master_id"/> </p>
+              <p><b>Your Sub String:</b> <input type = "text" id = "user_sub_id"/> </p>
           </div> <!-- question -->
           <div class="solution" data-type="custom">
             <div class="guess">
               [started]
             </div>
             <div class="validator-function">
-              if (!checkAnswer() && !guess[0])
+              var x = checkAnswer();
+              if (!x && !guess[0])
                 return "";
-              else return checkAnswer();
+              else return x;
             </div>
           </div>
           <div class="hints">
-            <div id="container">
-              <div class="jsavcontrols"></div><span class="jsavcounter"></span>
-              <p class="jsavoutput jsavline"></p>
-              <div class="jsavcanvas"></div>
+              <div id="hint1" class="jsavhint">
+              <span class="jsavcontrols"></span>
             </div>
           </div>
           <div class = "model"></div>
@@ -315,4 +336,64 @@
       </div> <!-- problems -->
     </div> <!--exercises-->
   </body>
+
+  <script>
+  ( function() {
+    var hintSlideshowFunctions = {
+      // objects with a function with key mathing id of an element inside .hints element
+      hint1: function(elem) {
+        // initialize a JSAV instance with the elem parameter
+        kmp_exercise = new JSAV(elem);
+        // record whatever you want in the hint slideshow
+
+        var master_arr = master_str.split("");
+        var sub_arr = sub_str.split("");
+
+        main_text = kmp_exercise.ds.array([' '], {indexed: true});
+
+
+        for(i=0; i<master_str.length;i++) {
+          main_text.value(i, master_str.charAt(i));
+        }
+
+        search_string = kmp_exercise.ds.array([' ']);
+
+        for(z=0;z<search_string.size();z++) {
+          search_string.value(z, ' ');
+        }
+
+        //need to make the arrays align nicely so we need to fill the remaining indexes of the substring array with empty characters 
+        for(j=0;j<master_str.length;j++) {
+          if(sub_str.charAt(j).length > 0) {
+            search_string.value(j, sub_str.charAt(j));
+          } else {
+            search_string.value(j, " ");
+          }
+        }
+        //initializing the alignment array
+        var alignment_table = kmp_exercise.ds.array([' ']);
+
+        for(f=0;f<align_table_temp.length;f++) {
+          alignment_table.value(f, align_table_temp[f]);
+        }
+        kmp_exercise.displayInit();
+        kmp_exercise.step();
+        kmp(main_text, search_string, alignment_table);
+
+      }
+    };
+      // set a function to be called every 50 ms to check if there are uninitialized hints
+    // set a function to be called every 50 ms to check if there are uninitialized hints
+    setInterval(function() {
+        // find all .jsavhint elements within the #hintsarea element which don't already
+        // have the class jsavcontainer added by JSAV when initialized
+        var emptyHints = $("#hintsarea .jsavhint:not(.jsavcontainer)");
+        if (emptyHints.size() > 0) {          // if we have empty hints elements..
+          var elem = emptyHints.first(),      // ..get the first elements..
+              id = elem[0].id;                // .. and its ID
+          hintSlideshowFunctions[id](elem);   // and call the matching initialization function
+        }
+      }, 50); // you might have to tweak this to get it work fast enough but not effect performance
+  })();
+    </script>
 </html>
