Minor changes in some exercises

--- a/AV/Development/infixToPostfix.html
+++ b/AV/Development/infixToPostfix.html
@@ -355,8 +355,7 @@
         function turnAnimationOff() {
             //save the state of fx.off
             var oldfx = $.fx.off || false;
-            //turn off the animations when painting the bars green
-            //because it doesn't work well with the swap
+            //turn off the jQuery animations
             $.fx.off = true;
         }
 
