--- a/Exercises/Development/Boyer_Moore_EX_PRO.html
+++ b/Exercises/Development/Boyer_Moore_EX_PRO.html
@@ -313,19 +313,40 @@
 
 
       /*
-        Function to computer the alignment array
+        Functions to compute the alignment array
+
+        we want suffix to match, char in front of suffix not to match, 
+
+        if(suffix matches && char in front of suffix != char in front of suffix match)
       */
+
+      //this is a recursive function to find the real last index of the suffix
+      function find_last_match(str, p, sub) {
+        var local_answer = str.lastIndexOf(sub.substring(p+1, sub.length));
+        if(local_answer == -1) { //base case, suffix not found 
+          return -1;
+        } else if(str.charAt(local_answer - 1) != sub.charAt(p)) { //we found our match
+          return local_answer;
+        } else { //shorten the string and try again so we don't get the same sub string
+          return find_last_match(str.substring(0, str.length-1), p, sub); 
+        }       
+      }
       function compute_align_array( sub ) {
         var align = new Array();
-        console.log(sub);
+        //console.log(sub);
         var offset, suffix_length, index_of_sub;
         align[sub.length-1] = 1;
         for(var i = sub.length-2; i >=0; i--){
           var p = i;
           suffix_length = sub.length - (p+1);
 
-          index_of_sub = sub.substring(0, p+1).lastIndexOf(sub.substring(p+1, sub.length));
-          console.log("p: "+(p+1) + " index of sub: "+index_of_sub);
+
+          offset = sub.length;
+          index_of_sub = -1;
+          var sub_temp = sub.substring(0, sub.length-1);
+
+          index_of_sub = find_last_match(sub_temp, p, sub);
+
           offset = sub.length;
           if(index_of_sub != -1){
             offset = (p+1) - index_of_sub;
