Resized JSAV container in some exercises.

--- a/AV/Development/postfixEvaluation.html
+++ b/AV/Development/postfixEvaluation.html
@@ -10,7 +10,7 @@
     <body>
         <style>
           #jsavcontainer {
-            width: 800px;
+            width: 740px;
             height: 650px;
             background-color: #fff;
             -moz-user-select: -moz-none;
@@ -24,6 +24,9 @@
           }
           .jsavcanvas {
             height: 500px;
+          }
+          .jsavarray {
+            margin: 0px;
           }
           p.instructLabel {
             margin-top: -5px;
